added session logout handling

--- a/addulator/css/common.css
+++ b/addulator/css/common.css
@@ -85,7 +85,11 @@ button:hover {
 /*
  * Activity
  */
- 
+
+.logout{
+	margin: -70px 10px auto auto;
+	float: right;
+}
 .submit{
 	width: 340px;
 }
