--- a/addulator/css/common.css
+++ b/addulator/css/common.css
@@ -105,6 +105,10 @@ button:hover {
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 35px;
+	color: blue;
+}
+.menu ul li a:visited{
+	color: blue;
 }
 .logout{
 	float: right;
