--- a/calculator/css/common.css
+++ b/calculator/css/common.css
@@ -88,8 +88,9 @@ button:hover {
 	left: 0px;
 	margin: 5px auto auto 5px;
 	height: 50px;
+	width: 800px;
 }
-.menuitem{
+div.menuitem{
 	float: left;
 	margin: 0px;
 	padding: 10px 25px;
@@ -101,26 +102,27 @@ button:hover {
 	font-size: 16px;
 	font-weight: bold;
 	text-decoration: none;
+	cursor: pointer;
 }
-.menuitem:hover {
+div.menuitem:hover {
 	background-color: yellowgreen;
 }
 
-.menuitem ul{
+div.menuitem ul{
 	list-style-type: none;
 	display: inline;
 	margin: 0px;
 }
-.menuitem ul li{
+div.menuitem ul li{
 }
-.menuitem ul li a{
+div.menuitem ul li a{
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 14px;
 	line-height: 25px;
 	color: blue;
 }
-.menuitem ul li a:visited{
+div.menuitem ul li a:visited{
 	color: blue;
 }
 
